--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "ky": "^0.21.0",
     "lodash": "^4.17.19",
     "mini-css-extract-plugin": "0.9.0",
+    "netlify-cli": "^2.59.1",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
